# yolov8_infer

./: class_images_in_folder.py  labels.txt  preprocess_comments.txt  tensorrt_inferer.py  text_file_names_images_in_folder.py  trt_yolo_cv.py  ultralytics_inferer.py  visualizers.py  yolo_detector.py  yolo_postprocessor.py  yolo_preprocessor.py  yolo_run.py
utils/: CMakeLists.txt  capturer_test.py  gstreamer_pipeline.c  gstreamer_pipeline.py  visualization.py  yolo_classes.py  yolo_with_plugins.py
x86_gstreamer_experiments/: Dockerfile  cmdln.txt  docker_run.sh  gstream_api_usage.py  gstreamer_sample.py
yolo/: requirements.txt
